--- a/MoviePick.MobileUI/MoviePick.MobileUI/Views/LoginPage.xaml
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/Views/LoginPage.xaml
@@ -6,6 +6,7 @@
              xmlns:vm="clr-namespace:MoviePick.MobileUI.ViewModels"
              xmlns:converters="clr-namespace:MoviePick.MobileUI.Converters"
              mc:Ignorable="d"
+             Title="Login"
              x:Class="MoviePick.MobileUI.Views.LoginPage"
              BackgroundColor="LightBlue"
              >
