--- a/MoviePick.MobileUI/MoviePick.MobileUI/Views/NewsPage.xaml
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/Views/NewsPage.xaml
@@ -23,7 +23,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
+                            <StackLayout Orientation="Horizontal" Padding="10">
                                 <StackLayout>
                                     <Image WidthRequest="120" HeightRequest="120" Source="{Binding CoverPhoto, Converter={StaticResource imgConv}}"></Image>
                                 </StackLayout>
