--- a/MoviePick.MobileUI/MoviePick.MobileUI/Views/HomePage.xaml
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/Views/HomePage.xaml
@@ -28,8 +28,14 @@
                 </Label.FormattedText>
             </Label>
             <Label FontSize="18" Text="Quote of the day"></Label>
-            <Label BackgroundColor="AntiqueWhite" Padding="10">
-                “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.” - The Godfather
+            <Label BackgroundColor="AntiqueWhite" Padding="10" >
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span x:Name="QOTD" />
+                        <Span Text=" - "/>
+                        <Span x:Name="MovieQOTD" />
+                    </FormattedString>
+                </Label.FormattedText>
             </Label>
             <Label x:Name="NewsPlace" FontSize="18" Text="News place >"></Label>
             <ListView ItemsSource="{Binding NewsList}" BackgroundColor="AntiqueWhite" ItemTapped="ListView_ItemTapped">
